# advent-of-code

./: .gitignore
2023/: pyproject.toml
2023/2023/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  bad-12.py
2024/: .gitignore  README.md  pre-commit  pyproject.toml  pytest.ini  repopulate_input  run  start  test
2024/01/: 01.py
2024/02/: 02.py
2024/03/: 03.py
2024/04/: 04.py
2024/05/: 05.py
2024/06/: 06.py
2024/07/: 07.py
2024/08/: 08.py
2024/09/: 09.py
2024/10/: 10.py
2024/11/: 11.py
2024/12/: 12.py  test_input5.txt
2024/13/: 13.py
2024/14/: 14.py
2024/common/: grid.py  test_grid.py  test_utils.py  utils.py
2024/template/: DD.py
